--- a/src/css/output.css
+++ b/src/css/output.css
@@ -632,6 +632,22 @@ video {
   top: 100%;
 }
 
+.bottom-7 {
+  bottom: 1.75rem;
+}
+
+.right-7 {
+  right: 1.75rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -723,6 +739,13 @@ video {
   margin-top: 1.25rem;
 }
 
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
 .block {
   display: block;
 }
@@ -755,16 +778,12 @@ video {
   height: 1.25rem;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-64 {
   height: 16rem;
 }
 
-.h-60 {
-  height: 15rem;
+.h-9 {
+  height: 2.25rem;
 }
 
 .w-14 {
@@ -797,10 +816,6 @@ video {
 
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-md {
-  max-width: 28rem;
 }
 
 .max-w-xl {
@@ -915,12 +930,12 @@ video {
 
 .bg-dark {
   --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(61 64 91 / var(--tw-bg-opacity));
 }
 
 .bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+  background-color: rgb(224 122 95 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100 {
@@ -1111,7 +1126,7 @@ video {
 
 .text-dark {
   --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
+  color: rgb(61 64 91 / var(--tw-text-opacity));
 }
 
 .text-pink-500 {
@@ -1121,12 +1136,12 @@ video {
 
 .text-primary {
   --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
+  color: rgb(224 122 95 / var(--tw-text-opacity));
 }
 
 .text-secondary {
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
+  color: rgb(129 178 154 / var(--tw-text-opacity));
 }
 
 .text-sky-500 {
@@ -1147,6 +1162,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .opacity-60 {
@@ -1205,7 +1225,7 @@ body {
 }
 
 .navbar-fixed:is(.dark *) {
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(61 64 91 / var(--tw-bg-opacity));
   --tw-bg-opacity: 0.5;
 }
 
@@ -1220,7 +1240,7 @@ body {
   height: 2px;
   width: 30px;
   --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(61 64 91 / var(--tw-bg-opacity));
 }
 
 .hamburger-line:is(.dark *) {
@@ -1261,17 +1281,17 @@ body {
 
 .hover\:border-primary:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(20 184 166 / var(--tw-border-opacity));
+  border-color: rgb(224 122 95 / var(--tw-border-opacity));
 }
 
 .hover\:bg-primary:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+  background-color: rgb(224 122 95 / var(--tw-bg-opacity));
 }
 
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
+  color: rgb(224 122 95 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1300,7 +1320,7 @@ body {
 
 .focus\:border-primary:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(20 184 166 / var(--tw-border-opacity));
+  border-color: rgb(224 122 95 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1316,17 +1336,17 @@ body {
 
 .focus\:ring-primary:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(20 184 166 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(224 122 95 / var(--tw-ring-opacity));
 }
 
 .group:hover .group-hover\:text-primary {
   --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
+  color: rgb(224 122 95 / var(--tw-text-opacity));
 }
 
 .dark\:bg-dark:is(.dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(61 64 91 / var(--tw-bg-opacity));
 }
 
 .dark\:bg-slate-300:is(.dark *) {
@@ -1341,7 +1361,7 @@ body {
 
 .dark\:text-dark:is(.dark *) {
   --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
+  color: rgb(61 64 91 / var(--tw-text-opacity));
 }
 
 .dark\:text-white:is(.dark *) {
@@ -1446,10 +1466,6 @@ body {
     background-color: transparent;
   }
 
-  .lg\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1458,11 +1474,6 @@ body {
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .lg\:text-5xl {
